--- a/app/Rmd/report_cetaceans_EN.Rmd
+++ b/app/Rmd/report_cetaceans_EN.Rmd
@@ -215,19 +215,21 @@ Please see a list of all sources of information used in @Lesage2018 and the Open
 #### ***Area-specific Blue Whale Important Habitat search results***
 
 ```{r overlap-bw-habitat, echo=FALSE, results='asis'}
-poly_sf <- BlueWhale_ImpHab_sf
+# intersect polyData with 3 polygons (region, map area, and study box)
+clipped <- master_intersect(BlueWhale_ImpHab_sf, mapDataList, getRegion=TRUE)
 attribute <- "Activity"
 
-# intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList, getRegion=TRUE)
 ```
 *
 ```{r bw-result, echo=FALSE, results='asis'}
-polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with Blue Whale Important Habitat in the Western North Atlantic."
-} else {"Search area overlaps with Blue Whale Important Habitat in the Western North Atlantic."}
+polyText <- if(is.null(clipped$studyData)){
+  "Search area does not overlap with Blue Whale Important Habitat in the Western North Atlantic."
+} else {
+  "Search area overlaps with Blue Whale Important Habitat in the Western North Atlantic."
+}
 
- polyText <- noquote(polyText)
- writeLines(polyText)
+polyText <- noquote(polyText)
+writeLines(polyText)
 ```
 
 ```{r bw-region-plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Blue Whale Important Habitat in the Western North Atlantic. Polygons delimit areas in Canadian waters that are important to Blue Whales for foraging and migration. These areas identified in the report by Lesage et al. (2018) are considered important for the survival and recovery of Blue Whales from the western North Atlantic population. Blue Whales most likely need to use several of these important habitats to fulfill their biological needs. As a result, access corridors and habitat they connect need to be considered equally important for the population.'}
@@ -264,11 +266,8 @@ The inter-canyon habitat area polygon was delineated using the 500 m depth conto
 #### ***Area-specific Northern Bottlenose Whale Important Habitat in inter-canyon areas on the eastern Scotian Shelf search results***
 
 ```{r overlap-nbw-habitat, echo=FALSE, results='asis'}
-poly_sf <- NBNW_ImpHab_sf
-attribute <- "NONE"
-
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList, getRegion=TRUE)
+clipped <- master_intersect(NBNW_ImpHab_sf, mapDataList, getRegion=TRUE)
 ```
 *
 ```{r nbw-result, echo=FALSE, results='asis'}
@@ -281,12 +280,12 @@ polyText <- if(is.null(clipped$studyData)){"Search area does not overlap with No
 
 ```{r nbw-region-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: High. Security level: none. Proposed Northern Bottlenose Whales important habitat in inter-canyon areas on the eastern Scotian Shelf. Northern Bottlenose Whales are present year-round in the inter-canyon areas, which function as foraging habitat and movement corridors. Note that the full extent of important habitat for Scotian Shelf Northern Bottlenose Whales remains unknown. Please see additional information in <a href="http://publications.gc.ca/collections/collection_2020/mpo-dfo/fs70-6/Fs70-6-2020-008-eng.pdf">DFO 2020</a>.'}
 if (!is.null(clipped$regionData)){
-  plot_rr_sf(regionMap, clipped$regionData, attribute)
+  plot_rr_sf(regionMap, clipped$regionData, "NONE")
 }
 ```
 
 ```{r nbw-area-plot, fig.height=4, fig.width=11, fig.cap='Quality Tier: High. Security level: none. This map summarizes areas where the search polygon overlaps with Northern Bottlenose Whale important habitat in inter-canyon areas on the eastern Scotian Shelf.'}
 if (!is.null(clipped$mapData)){
-  plot_rr_sf(areaMap, clipped$mapData, attribute)
+  plot_rr_sf(areaMap, clipped$mapData, "NONE")
 }
 ```
