--- a/app/Rmd/report_habitat_EN.Rmd
+++ b/app/Rmd/report_habitat_EN.Rmd
@@ -40,36 +40,36 @@ poly_sf$status[which(poly_sf$RWP==0)] = "Not Present"
 
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList)
+clippedRW <- master_intersect(poly_sf, mapDataList)
 ```
 *
 ```{r overlap-rockweed-output, echo=FALSE, results='asis'}
-polyText <- if(is.null(clipped$studyData)){
+polyText <- if(is.null(clippedRW$studyData)){
   "There are no relevant records of predicted intertidal vegetation for this search area."
 } else {
   "There are relevant records of predicted intertidal vegetation for this search area."
 }
 
- polyText <- noquote(polyText)
- writeLines(polyText)
+polyText <- noquote(polyText)
+writeLines(polyText)
 ```
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user: location of the proposed project/activity is highlighted in yellow (input polygon), surrounded by an exposure zone or user-defined buffer area in blue. Figure shows overlap between the search area and satellite-based maps of intertidal vegetation and rockweed presence polygons.'}
-if(!is.null(clipped$studyData)){
-  print(plot_rr_sf(areaMap, clipped$mapData, attribute, outlines = FALSE, legendName="Rockweed"))
+if(!is.null(clippedRW$studyData)){
+  plot_rr_sf(areaMap, clippedRW$mapData, attribute, outlines = FALSE, legendName="Rockweed")
 }
 ```
 
 ```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
-if(!is.null(clipped$studyData)){
-  rwTable <- rockweedStats(clipped$studyData, studyArea)
+if(!is.null(clippedRW$studyData)){
+  rwTable <- rockweedStats(clippedRW$studyData)
   names(rwTable) <- c("Category", "Number of Polygons", "Area km2")
 }
 ```
 
 ```{r rockweed-table}
-if(!is.null(clipped$studyData)){
-knitr::kable(rwTable,align="l", caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep = "") %>%
+if(!is.null(clippedRW$studyData)){
+  knitr::kable(rwTable,align="l", caption = "Number of vegetation polygons and surface area occupied by each category for the study area. Total intertidal vegetations is a sum of all categories.", booktabs = T, escape = F, linesep = "") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 } 
 ```
