--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -34,12 +34,12 @@ poly_sf$status[which(poly_sf$RWP==5)] = "Unknown"
 poly_sf$status[which(poly_sf$RWP==0)] = "Not Present"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, mapDataList)
+clippedRW <- master_intersect(poly_sf, mapDataList)
 ```
 *
 ```{r overlap rockweed output, echo=FALSE, results='asis'}
 
-polyText<-if(is.null(clipped$studyData)){
+polyText<-if(is.null(clippedRW$studyData)){
   "Il n’existe aucun registre pertinent sur la végétation intertidale prévue pour cette zone de recherche."
 } else {
   "Il existe des registres pertinentes sur la végétation intertidale prévue pour cette zone de recherche."
@@ -50,24 +50,22 @@ polyText<-if(is.null(clipped$studyData)){
 ```
 
 ```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur : l’emplacement du projet ou de l’activité proposé est surligné en jaune (polygone d’entrée), entouré d’une zone exposée ou d’une zone tampon définie par l’utilisateur en bleu. La figure illustre le chevauchement entre la zone de recherche et les cartes satellitaires de la végétation intertidale et des polygones de présence de fucus.'}
-if(!is.null(clipped$studyData)){
-  print(plot_rr_sf(areaMap, clipped$mapData, attribute, outlines=FALSE, legendName= "Végétation Intertidale"))
+if(!is.null(clippedRW$studyData)){
+  plot_rr_sf(areaMap, clippedRW$mapData, attribute, outlines=FALSE, legendName= "Végétation Intertidale")
 }
 ```
 
 ```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
-if(!is.null(clipped$studyData)){
-  rwTable <- rockweedStats(clipped$studyData, studyArea)
-    names(rwTable) <- c("Catégorie", "Nombre de polygones", "Superficie km2")
-
+if(!is.null(clippedRW$studyData)){
+  rwTable <- rockweedStats(clippedRW$studyData)
+  names(rwTable) <- c("Catégorie", "Nombre de polygones", "Superficie km2")
 }
 
 ```
 
 ```{r rockweed-table}
-if(!is.null(clipped$studyData)){
-knitr::kable(rwTable,align="l",
-             caption = "Nombre de polygones de végétation et la superficie occupée par chaque catégorie pour la zone d’étude. La végétation intertidale totale est la somme de tous les catégories.", booktabs = T, escape = F, linesep="") %>%
+if(!is.null(clippedRW$studyData)){
+  knitr::kable(rwTable,align="l", caption = "Nombre de polygones de végétation et la superficie occupée par chaque catégorie pour la zone d’étude. La végétation intertidale totale est la somme de tous les catégories.", booktabs = T, escape = F, linesep="") %>%
   kable_styling(bootstrap_options = "striped", full_width = T, position = "left")
 }
 ```
