--- a/app/Rmd/report_planning_EN.Rmd
+++ b/app/Rmd/report_planning_EN.Rmd
@@ -23,8 +23,6 @@ Dataset description from the Open Data record [@OpenData_ebsa]: Ecologically and
 #function for overlap
 EBSAoutput <- master_intersect(EBSA_sf, mapDataList, getRegion=TRUE)
 
-# define polygon dataset and attribute to plot
-attribute <- "NONE"
 ```
 *
 ```{r EBSA-check, echo=FALSE, results='asis'}
@@ -48,11 +46,12 @@ EBSA_report(EBSAoutput$studyData, lang="EN")
 
 ```{r EBSA-region-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) relative to the search area defined by the user (red outline).'}
 if (!is.null(EBSAoutput$regionData)){
-  plot_rr_sf(regionMap, EBSAoutput$regionData, attribute)
+  plot_rr_sf(regionMap, EBSAoutput$regionData, "NONE")
 }
 ```
 
 ```{r EBSA-area-plot, fig.height=8, fig.width=11, fig.cap= 'Quality Tier: High. Security level: none. Map showing Ecologically and Biologically Significant Areas (EBSA) in the search area defined by the user (red outline).'}
-if(!is.null(EBSAoutput$studyData)){print(
-  plot_rr_sf(areaMap, EBSAoutput$mapData, attribute))}
+if(!is.null(EBSAoutput$studyData)){
+  plot_rr_sf(areaMap, EBSAoutput$mapData, "NONE")
+}
 ```
